# vrack

./: autogen.sh  configure.in
m4/: Makefile.am
src/: .gitignore  Makefile.am  cmdq.c  cmdq.h  display.c  display.h  gui.c  gui.h  kvm.c  kvm.h  main.c  main.h  misc.c  misc.h  qmach.c  qmach.h  rack.c  rack.h  switch.c  switch.h  tempdir.c  tempdir.h  vnc.c  vnc.h
